--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="recipes/lasagna.html">Worlds best lasagna</a>
+    <a href="recipes/lasagna.html">World's best lasagna</a>
 </body>
 </html>
