--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,34 @@
     <title>Lasagna recipe</title>
 </head>
 <body>
-    <h1>Worlds best lasagna</h1>    
+    <h1>World's best lasagna</h1>
+    <img width="500" alt="lasagna picture" src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg">    
+    <!-- ingredients -->
+    <h2>Lasagna Ingredients </h2>
+    <ul>
+        <li><strong>Meat:</strong> This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
+        <li><strong>Onion and garlic:</strong> An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
+        <li><strong>Tomato products:</strong> You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
+        <li><strong>Sugar:</strong> Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.</li>
+        <li><strong>Spices and seasonings:</strong> This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.</li>
+        <li><strong>Lasagna noodles:</strong> Use store-bought or homemade lasagna noodles.</li>
+        <li><strong>Cheeses:</strong> Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
+        <li><strong>Egg:</strong> An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
+    </ul>
+    <!-- steps -->
+    <h2>How to Make Lasagna Step-By-Step</h2>
+    <ol>
+        <li>Make the meat sauce.</li>
+        <li>Cook the noodles.</li>
+        <li>Make the ricotta mixture.</li>
+        <li>Layer the lasagna according to the recipe instructions.</li>
+        <li>Cover with foil and bake.</li>
+        <li>Let the lasagna rest before serving.</li>
+    </ol>
+    <!-- instructions -->
+    <h2>How Long to Cook Lasagna </h2>
+    <p>
+        The assembled lasagna should take about 50 minutes to cook in an oven preheated to 375 degrees F. Cover it with foil for the first 25 minutes, then let it cook uncovered for the final 25 minutes. Also, it's important to let the lasagna rest at room temperature for about 15 minutes before you cut into it. 
+    </p>
 </body>
 </html>
