--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="recipes/lasagna.html">World's best lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">World's best lasagna</a></li>
+        <li><a href="recipes/spaghetti.html">Spaghetti Aglio e Olio</a></li>
+        <li><a href="recipes/pancakes.html">Banana pancakes</a></li>
+    </ul>
 </body>
 </html>
