small pictures added to index

--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
 <body>
     <h1>Odin recipes</h1>
     <ul>
-        <li><a href="recipes/lasagna.html">World's best lasagna</a></li>
-        <li><a href="recipes/spaghetti.html">Spaghetti Aglio e Olio</a></li>
-        <li><a href="recipes/pancakes.html">Banana pancakes</a></li>
+        <li>    
+            <a href="recipes/lasagna.html">World's best lasagna</a>
+            <p><img width="200" alt="lasagna picture" src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg"></p>
+        </li>
+        <li>
+            <a href="recipes/spaghetti.html">Spaghetti Aglio e Olio</a>
+            <p><img width="200" alt="spaghetti picture" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8962968.jpg&q=60&c=sc&orient=true&poi=auto&h=512"></p>
+        </li>
+        <li>
+            <a href="recipes/pancakes.html">Banana pancakes</a>
+            <p><img width="200" alt="pancakes picture" src="https://www.allrecipes.com/thmb/QpN-qJZ0o_aUSUXPtJ81_ToDCX0=/771x514/filters:no_upscale():max_bytes(150000):strip_icc():focal(740x487:742x489):format(webp)/Cinnamon-Roll-Pancakes-4x3-2000-65529269b7df4aaebc4914f8a1052a1b-883ce41cb18d441390af0f18d03944fb.jpg"></p>    
+        </li>
     </ul>
 </body>
 </html>
