--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>spaghetti recipe</title>
 </head>
 <body>
     <h1>Spaghetti Aglio e Olio</h1>
-    <img width="500" alt="spaghetti picture" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8962968.jpg&q=60&c=sc&orient=true&poi=auto&h=512">    
+    <img class="images" width="500" alt="spaghetti picture" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8962968.jpg&q=60&c=sc&orient=true&poi=auto&h=512">    
     <!-- ingredients -->
     <h2>Ingredients </h2>
     <ul>
